<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <include
            layout="@layout/widget_toolbar" />


        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_border"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/register_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/et_new_account"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:inputType="phone"
                android:hint="@string/register_account_hint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_border"
            android:layout_width="match_parent"
            android:layout_height="65dp" >

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/register_dynamic_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/et_dynamic_pwd"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:inputType="textPassword"
                android:hint="@string/register_dynamic_pwd_hint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:layout_gravity="center_vertical"
                android:background="@drawable/black_border"
                android:id="@+id/btnGetCode"
                android:text="@string/register_dynamic_pwd_get"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_border"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/register_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/et_password_first"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:hint="@string/register_pwd_hint"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_border"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/register_pwd_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/et_password_second"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:hint="@string/register_pwd_second_hint"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <Button
            android:background="@drawable/btn_login"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/btn_register"
            android:text="@string/confirm"
            android:textSize="18sp"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</ScrollView>
