<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:src="@mipmap/logo"
                android:layout_width="200dp"
                android:layout_height="160dp" />

            <LinearLayout
                android:layout_marginTop="30dp"
                android:background="@drawable/black_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/login_account_hint"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:background="@drawable/black_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <EditText
                    android:id="@+id/et_user_password"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/login_pwd_hint"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="right"
                    android:id="@+id/tv_forget_password"
                    android:text="@string/forget_password"
                    android:textColor="@color/btnColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <Button
                android:background="@drawable/btn_login"
                android:layout_marginTop="20dp"
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:id="@+id/tv_regist"
        android:textColor="@color/btnColor"
        android:text="@string/register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
