<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        layout="@layout/widget_toolbar" />

    <LinearLayout
        style="@style/layout_info"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/name"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/input_name"
            android:textColor="@color/black"
            android:hint="@string/please_input"
            android:background="@null"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <LinearLayout
        style="@style/layout_info"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/phone"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="@color/black"
            android:id="@+id/input_phone"
            android:hint="@string/please_input"
            android:background="@null"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        style="@style/layout_info"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/address"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="@color/black"
            android:id="@+id/input_address"
            android:hint="@string/please_input"
            android:background="@null"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        style="@style/layout_info"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/email"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:textColor="@color/black"
            android:id="@+id/input_email"
            android:hint="@string/please_input"
            android:background="@null"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <View
        android:background="@color/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <View
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <LinearLayout
        android:id="@+id/modify_passwrod"
        style="@style/layout_info"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/modify_password"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />



        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:id="@+id/sub_account_management"
        style="@style/layout_info"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/sub_account_management"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />


        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <Button
        android:text="@string/exit_login"
        android:background="@drawable/btn_confirm_bg"
        style="@style/btn_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
