<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <include layout="@layout/widget_toolbar" />


    <LinearLayout
        android:id="@+id/help_and_feedback"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/help_and_feedback"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:drawablePadding="8dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:id="@+id/online_instruction"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/online_instruction"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:drawablePadding="8dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <LinearLayout
        android:id="@+id/about_us"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/about_us"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:drawablePadding="8dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_arrow"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <View
        android:background="@color/line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />



</LinearLayout>